@@ -24,6 +24,9 @@ MISSING FEATURES
 Allow applets inside the panel? Allow the filer to go inside GNOME-panel
 and similar?
 
+Highlight Find expressions in red while they're invalid. Also, do this
+in the minibuffer.
+
 Scrollable panel (already works with wheel-mice).
 
 Back/Forwards browser style navigation?
