@@ -28,7 +28,7 @@ extern uid_t euid;
 extern gid_t egid;
 extern int ngroups;			/* Number of supplemental groups */
 extern gid_t *supplemental_groups;
-extern char *home_dir;
+extern char *home_dir, *app_dir;
 
 /* Prototypes */
 int main(int argc, char **argv);
